--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "bignumber.js": "^9.0.2",
     "chalk": "^5.0.1",
     "web3": "^1.7.1"
   }
